--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -1,13 +1,13 @@
 
 /* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
+  display: none; 
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   padding-top: 100px; /* Location of the box */
-  left: 25%;
+  left: 20.5%;
   top: 0;
-  width: 75%; /* Full width */
+  width:80%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
